--- a/src/App.css
+++ b/src/App.css
@@ -70,6 +70,7 @@
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
+  background-position:center;
   height:100vh ;
   width: 100%;
 }
