resubida de app con backend y cities

--- a/src/App.css
+++ b/src/App.css
@@ -228,3 +228,55 @@
   background-color: #0d1c53;
   color: white;
 }
+
+.title {
+ 
+  margin-bottom: 50px;
+  text-transform: uppercase;
+}
+
+/* .card-block {
+  font-size: 1em;
+  
+  margin: 0;
+  padding: 1em;
+  border: none;
+  border-top: 1px solid rgba(34, 36, 38, .1);
+  box-shadow: none;
+   
+}
+.card {
+  font-size: 1em;
+  overflow: hidden;
+  padding: 5;
+  border: none;
+  border-radius: .28571429rem;
+  box-shadow: 0 1px 3px 0 #d4d4d5, 0 0 0 1px #d4d4d5;
+  margin-top:20px;
+} */
+
+
+
+.btn-card {
+margin-top: auto;
+}
+
+
+@media (max-width: 1725px) {
+  .carta{
+    flex-direction: column !important;
+    justify-content: center;
+    align-items: center;
+  }
+} 
+
+.text-just{
+  text-align: justify;
+  text-justify: inter-word;
+}
+
+
+
+.cont{
+  max-width: 75%;
+}
