--- a/src/components/SignUp/styleSign.css
+++ b/src/components/SignUp/styleSign.css
@@ -16,3 +16,24 @@
 	-webkit-border-radius: 50%;
 	border-radius: 50%;
 }
+
+.buttonsocial{
+	width: 100%;
+	height: 50px;
+	margin-bottom: 5px;
+	display: flex;
+	justify-content: left;
+	align-items: center;
+	border: 0px;
+	border-radius: 10px !important;
+}
+.my-facebook-button-class{
+	background-color: rgb(52, 52, 207);
+	color:white;
+	
+}
+
+.buttonsocial :nth-child(1){
+	margin-right: 0px !important;
+	width: 45px !important;
+}
